[package]
name = "actix-app-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio"] }
serde = "1.0.203"
serde_json = "1.0.117"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "local-time"] }
tracing-appender = "0.2"
chrono = "0.4.38"
